sumo/tests/dfrouter/errors/detector_files/false_detectors_file3_deprecated/errors.dfrouter
Warning: Please note that using ';' as list separator is deprecated.
 From 1.0 onwards, only ',' will be accepted.
Error: Could not open detector file 'xxx.det.xml'
Quitting (on error).
